NetBSD Problem Report #1027
From gnats Sat May 6 22:34:36 1995
Received: from pain.lcs.mit.edu (pain.lcs.mit.edu [128.52.46.239]) by sun-lamp.cs.berkeley.edu (8.6.10/8.6.10) with ESMTP id WAA24438 for <gnats-bugs@sun-lamp.cs.berkeley.edu>; Sat, 6 May 1995 22:34:35 -0700
Message-Id: <199505070529.BAA16284@kolvir.blrc.ma.us>
Date: Sun, 7 May 1995 01:29:41 -0400
From: John Kohl <jtk@kolvir.blrc.ma.us>
Reply-To: jtk@kolvir.blrc.ma.us
To: gnats-bugs@NetBSD.ORG
Subject: audio device doesn't call to set hardware recording gain correctly
X-Send-Pr-Version: 3.2
>Number: 1027
>Category: kern
>Synopsis: audio device doesn't call to set hardware recording gain correctly
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: kern-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat May 06 22:35:01 +0000 1995
>Closed-Date: Mon May 08 22:14:40 +0000 1995
>Last-Modified:
>Originator: John Kohl
>Release: 1.0A (-current)
>Organization:
NetBSD Kernel Hackers `R` Us
>Environment:
System: NetBSD kolvir 1.0A NetBSD 1.0A (KOLVIR) #311: Thu May 4 21:37:13 EDT 1995 jtk@kolvir:/u1/NetBSD-current/src/sys/arch/i386/compile/KOLVIR i386
>Description:
The audio driver doesn't tag the mixer command to set recording gain
properly--it needs to set AUDIO_MIXER_VALUE.
>How-To-Repeat:
try setting the recording gain with ioctl(xx, AUDIO_SETINFO, &info).
>Fix:
*** audio.c.~1~ Sat May 6 06:10:13 1995
--- sys/dev/audio.c Sun May 7 01:26:19 1995
***************
*** 1476,1487 ****
--- 1476,1489 ----
}
if (p->gain != ~0) {
ct.dev = hw->get_out_port(sc->hw_hdl);
+ ct.type = AUDIO_MIXER_VALUE;
ct.un.value.num_channels = 1;
ct.un.value.level[AUDIO_MIXER_LEVEL_MONO] = p->gain;
hw->set_port(sc->hw_hdl, &ct);
}
if (r->gain != ~0) {
ct.dev = hw->get_in_port(sc->hw_hdl);
+ ct.type = AUDIO_MIXER_VALUE;
ct.un.value.num_channels = 1;
ct.un.value.level[AUDIO_MIXER_LEVEL_MONO] = r->gain;
hw->set_port(sc->hw_hdl, &ct);
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: brezak
State-Changed-When: Mon May 8 15:14:40 PDT 1995
State-Changed-Why:
Applied suggested patch
.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.