Set mixer type for rec and play level set. PR#1027